# dart-secp256k1

./: .gitignore  README.md  pubspec.yaml
example/: dart_secp256k1_example.dart
lib/: dart_secp256k1.dart
lib/src/: classes.dart  dart_secp256k1_base.dart  utils.dart
native/: CMakeLists.txt  testcmake
native/include/: a.h  a.hpp
native/src/: a.c  a.cpp
trytest/: CMakeLists.txt
trytest/include/: a.h  random.h
trytest/src/: a.c
